--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.14.3",
+    "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-label": "^2.1.3",
@@ -39,7 +40,9 @@
     "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.55.0",
     "server-only": "^0.0.1",
+    "sonner": "^2.0.3",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
