--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
+    "usehooks-ts": "^3.1.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
