--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@clerk/nextjs": "^6.14.3",
     "@google/generative-ai": "^0.24.0",
     "@hookform/resolvers": "^5.0.1",
+    "@langchain/community": "^0.3.41",
+    "@langchain/core": "^0.3.45",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-label": "^2.1.3",
@@ -38,6 +40,7 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ignore": "^7.0.3",
     "lucide-react": "^0.488.0",
     "next": "^15.2.3",
     "octokit": "^4.1.3",
