--- a/package.json
+++ b/package.json
@@ -50,12 +50,14 @@
     "clsx": "^2.1.1",
     "ignore": "^7.0.3",
     "lucide-react": "^0.488.0",
+    "mermaid": "^11.6.0",
     "next": "^15.2.3",
     "octokit": "^4.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-syntax-highlighter": "^15.6.1",
+    "rehype-rewrite": "^4.0.2",
     "server-only": "^0.0.1",
     "sonner": "^2.0.3",
     "superjson": "^2.2.1",
