--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@ai-sdk/google": "^1.2.18",
     "@clerk/nextjs": "^6.14.3",
+    "@google/genai": "^1.0.0",
     "@google/generative-ai": "^0.24.0",
     "@hookform/resolvers": "^5.0.1",
     "@langchain/community": "^0.3.41",
