--- a/package.json
+++ b/package.json
@@ -23,17 +23,20 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.18",
+    "@ai-sdk/groq": "^1.2.9",
     "@clerk/nextjs": "^6.14.3",
     "@google/genai": "^1.0.0",
     "@google/generative-ai": "^0.24.0",
     "@hookform/resolvers": "^5.0.1",
     "@langchain/community": "^0.3.41",
     "@langchain/core": "^0.3.45",
+    "@langchain/groq": "^0.2.2",
     "@octokit/rest": "^21.1.1",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-progress": "^1.1.6",
+    "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.11",
@@ -65,7 +68,7 @@
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "usehooks-ts": "^3.1.1",
-    "zod": "^3.24.2"
+    "zod": "^3.25.13"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
