--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@langchain/groq": "^0.2.2",
     "@octokit/rest": "^21.1.1",
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-progress": "^1.1.6",
